Creating the rough copy of the dashboard page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Campus Life Planner | Dashboard</title>
+    <link rel="stylesheet" href="styles/">
 </head>
 <body>
+    <header>
+        <h1>Campus Life</h1>
+        <p>Welcome back Abby! Here's how your week looks like now.</p>
+    </header>
 
+    <main>
+        <!-- this section has the weekly overview of the users data -->
+        <section id="weeklyOverview">
+            <h2>Weekly Overview</h2>
+            <p id="completedTasks">Completed Tasks</p>
+            <p id="frequentTag">Most Frequent Tag</p>
+            <p id="overdueTasks">Overdue Tasks</p>
+            <p id="weeklyTrend"> Last 7 Days</p>
+            <p id="weeklyTarget">Weekly Target</p>
+        </section>
+
+        <section id="todaysTasks">
+            <h2>Here are you tasks for today.</h2>
+            <ul id="taskList">
+
+            </ul>
+        </section>
+
+        <section id="upcomingEvents">
+            <h2>Upcoming Events</h2>
+            <ul id="eventsList">
+
+            </ul>
+        </section>
+    </main>
+<script src="scripts/"></script>
 </body>
 </html>
