Styling the Addform

--- a/addForm.html
+++ b/addForm.html
@@ -45,8 +45,8 @@
                     </div>
 
                     <div class="formActions">
-                        <button type="submit">Save Task</button>
-                        <button type="button">Cancel</button>
+                        <button type="submit" class="btn saveBtn">Save Task</button>
+                        <button type="button" class="btn cancelBtn">Cancel</button>
                     </div>
                 </form>
             </section>
