Adding the js script

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="navBar">
                 <h1>Campus Life Planner</h1>
                 <button class="hamburger" id="hamburger">☰</button>
-                <ul class="navLinks">
+                <ul class="navLinks" id="navLinks">
                     <li><a href="index.html">Dashboard</a></li>
                     <li><a href="addForm.html">Add New</a></li>
                     <li><a href="tasks.html">All Tasks</a></li>
@@ -35,15 +35,15 @@
             <div class="weeklyStats">
                 <div class="statCard">
                     <p class="statTitle">Completed</p>
-                    <p class="statValue"></p>
+                    <p class="statValue">3</p>
                 </div>
                 <div class="statCard">
                     <p class="statTitle">Frequent Tag</p>
-                    <p class="statValue"></p>
+                    <p class="statValue">Study</p>
                 </div>
                 <div class="statCard">
                     <p class="statTitle">Overdue</p>
-                    <p class="statValue"></p>
+                    <p class="statValue">1</p>
                 </div>
             </div>
         </section>
@@ -72,6 +72,6 @@
         </section>
     </footer>
 </div>
-<script src="scripts/"></script>
+<script src="scripts/main.js"></script>
 </body>
 </html>
