--- a/tasks.html
+++ b/tasks.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campus Life Planner | Tasks</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
 <header>
-    <h1>Campus Life Planner</h1>
     <nav>
-        <ul>
-            <li><a href="index.html">Dashboard</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="tasks.html">All Tasks</a></li>
-            <li><a href="settings.html">Settings</a></li>
-            <li><a href="addForm.html">Add New</a></li>
-        </ul>
+        <div class="navBar">
+            <h1>Campus Life Planner</h1>
+            <button class="hamburger" id="hamburger">☰</button>
+            <ul class="navLinks">
+                <li><a href="index.html">Dashboard</a></li>
+                <li><a href="addForm.html">Add New</a></li>
+                <li><a href="tasks.html">All Tasks</a></li>
+                <li><a href="settings.html">Settings</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </div>
     </nav>
 </header>
 <main>
