--- a/addForm.html
+++ b/addForm.html
@@ -10,13 +10,17 @@
     <div class="container">
         <header>
             <nav>
-                <ul class="navLinks">
-                    <li><a href="index.html">Dashboard</a></li>
-                    <li><a href="addForm.html">Add New</a></li>
-                    <li><a href="tasks.html">All Tasks</a></li>
-                    <li><a href="settings.html">Settings</a></li>
-                    <li><a href="about.html">About</a></li>
-                </ul>
+                <div class="navBar">
+                    <h1>Campus Life Planner</h1>
+                    <button class="hamburger" id="hamburger">☰</button>
+                    <ul class="navLinks">
+                        <li><a href="index.html">Dashboard</a></li>
+                        <li><a href="addForm.html">Add New</a></li>
+                        <li><a href="tasks.html">All Tasks</a></li>
+                        <li><a href="settings.html">Settings</a></li>
+                        <li><a href="about.html">About</a></li>
+                    </ul>
+                </div>
             </nav>
         </header>
         <main>
