Creating modules to save and view the tasks

--- a/addForm.html
+++ b/addForm.html
@@ -25,6 +25,7 @@
         </header>
         <main>
             <section class="formSection">
+                <div id="statusMessage" role="status" aria-live="polite"></div>
                 <h2>Add New Task</h2>
 
                 <form id="taskForm" class="taskForm">
@@ -56,5 +57,7 @@
             </section>
         </main>
     </div>
+<script type="module" src="scripts/storage.js"></script>
+<script type="module" src="scripts/addForm.js"></script>
 </body>
 </html>
