Applying regex patterns to validate user input

--- a/addForm.html
+++ b/addForm.html
@@ -59,5 +59,6 @@
     </div>
 <script type="module" src="scripts/storage.js"></script>
 <script type="module" src="scripts/addForm.js"></script>
+<script type="module" src="scripts/validators.js"></script>
 </body>
 </html>
