--- a/tasks.html
+++ b/tasks.html
@@ -45,5 +45,6 @@
 </main>
 <script type="module" src="scripts/storage.js"></script>
 <script type="module" src="scripts/taskList.js"></script>
+<script type="module" src="scripts/search.js"></script>
 </body>
 </html>
