Created a dashboard.js file to handle the weekly statistics

--- a/addForm.html
+++ b/addForm.html
@@ -13,7 +13,7 @@
                 <div class="navBar">
                     <h1>Campus Life Planner</h1>
                     <button class="hamburger" id="hamburger">☰</button>
-                    <ul class="navLinks">
+                    <ul class="navLinks" id="navLinks">
                         <li><a href="index.html">Dashboard</a></li>
                         <li><a href="addForm.html">Add New</a></li>
                         <li><a href="tasks.html">All Tasks</a></li>
@@ -57,6 +57,7 @@
             </section>
         </main>
     </div>
+<script type="module" src="scripts/main.js"></script>
 <script type="module" src="scripts/storage.js"></script>
 <script type="module" src="scripts/addForm.js"></script>
 <script type="module" src="scripts/validators.js"></script>
