--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
             <div class="weeklyStats">
                 <div class="statCard">
                     <p class="statTitle">Completed</p>
-                    <p class="statValue" id="completedTasks">3</p>
+                    <p class="statValue" id="completedTasks"></p>
                 </div>
                 <div class="statCard">
                     <p class="statTitle">Frequent Tag</p>
-                    <p class="statValue" id="overdueTasks">Study</p>
+                    <p class="statValue" id="frequentTag"></p>
                 </div>
                 <div class="statCard">
                     <p class="statTitle">Overdue</p>
-                    <p class="statValue" id="frequentTag">1</p>
+                    <p class="statValue" id="overdueTasks"></p>
                 </div>
             </div>
         </section>
@@ -73,6 +73,7 @@
     </footer>
 </div>
 <script type="module" src="scripts/main.js"></script>
+<script type="module" src="scripts/dashboard.js"></script>
 <script type="module" src="scripts/storage.js"></script>
 </body>
 </html>
