--- a/tasks.html
+++ b/tasks.html
@@ -12,7 +12,7 @@
         <div class="navBar">
             <h1>Campus Life Planner</h1>
             <button class="hamburger" id="hamburger">☰</button>
-            <ul class="navLinks">
+            <ul class="navLinks" id="navLinks">
                 <li><a href="index.html">Dashboard</a></li>
                 <li><a href="addForm.html">Add New</a></li>
                 <li><a href="tasks.html">All Tasks</a></li>
@@ -43,6 +43,7 @@
         </div>
     </section>
 </main>
+< <script type="module" src="scripts/main.js"></script>
 <script type="module" src="scripts/storage.js"></script>
 <script type="module" src="scripts/taskList.js"></script>
 <script type="module" src="scripts/search.js"></script>
