Loading the seed data to start the project

--- a/tasks.html
+++ b/tasks.html
@@ -24,6 +24,7 @@
 </header>
 <main>
     <section class="controls">
+        <label for="searchTasks">Search:</label>
         <input class="searchTasks" id="searchTasks" type="text" placeholder="Search here...">
 
         <div class="sort">
