--- a/settings.html
+++ b/settings.html
@@ -17,5 +17,12 @@
             </ul>
         </nav>
     </header>
+
+    <section>
+        <h1>Settings</h1>
+
+    </section>
+
+<script type="module" src="scripts/main.js"></script>
 </body>
 </html>
