--- a/settings.html
+++ b/settings.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/main.css">
     <title>Campus Life Planner | Settings</title>
 </head>
 <body>
@@ -19,10 +20,31 @@
     </header>
 
     <section>
-        <h1>Settings</h1>
+        <div class="settingsCard">
+            <h1>Settings</h1>
+            <form id="settingsForm">
+                <div class="formGroup">
+                    <label for="durarionUnit"> Duration</label>
+                    <select id="durarionUnit" name="durarionUnit" required>
+                        <option value="minutes">Minutes (min)</option>
+                        <option value="hours">Hours (hrs)</option>
+                    </select>
+                </div>
+                <div class="formGroup">
+                    <label for="taskCap">Weekly Task Target:</label>
+                    <input type="number" id="taskCap" name="taskCap" required>
+                </div>
+
+                <div class="formGroup">
+                    <button type="submit" class="saveBtn"> Save Settings</button>
+                </div>
+            </form>
+        </div>
+
 
     </section>
 
 <script type="module" src="scripts/main.js"></script>
+<script type="module" src="scripts/settings.js"></script>
 </body>
 </html>
