--- a/tasks.html
+++ b/tasks.html
@@ -8,21 +8,22 @@
 </head>
 <body>
 <header>
-    <nav>
-        <div class="navBar">
-            <h1>Campus Life Planner</h1>
-            <button class="hamburger" id="hamburger">☰</button>
-            <ul class="navLinks" id="navLinks">
-                <li><a href="index.html">Dashboard</a></li>
-                <li><a href="addForm.html">Add New</a></li>
-                <li><a href="tasks.html">All Tasks</a></li>
-                <li><a href="settings.html">Settings</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
-        </div>
-    </nav>
+<nav>
+    <div class="navBar">
+        <h1>Campus Life Planner</h1>
+        <button class="hamburger" id="hamburger" aria-controls="navLinks" aria-expanded="false" aria-label="toggle menu">☰</button>
+        <ul class="navLinks" id="navLinks">
+            <li><a href="index.html">Dashboard</a></li>
+            <li><a href="addForm.html">Add New</a></li>
+            <li><a href="tasks.html">All Tasks</a></li>
+            <li><a href="settings.html">Settings</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
+    </div>
+</nav>
 </header>
 <main>
+    <div id="statusMessage" role="status" aria-live="polite" aria-atomic="true"></div>
     <section class="controls">
         <label for="searchTasks">Search:</label>
         <input class="searchTasks" id="searchTasks" type="text" placeholder="Search here...">
