Designing the footer

--- a/addForm.html
+++ b/addForm.html
@@ -56,6 +56,12 @@
                 </form>
             </section>
         </main>
+        <footer>
+            <section class="contact">
+                <p>Made by Abigail Salem</p>
+                <a href="https://github.com/">My GitHub</a>
+            </section>
+        </footer>
     </div>
 <script type="module" src="scripts/main.js"></script>
 <script type="module" src="scripts/storage.js"></script>
