--- a/settings.html
+++ b/settings.html
@@ -22,6 +22,7 @@
     </div>
 </nav>
 </header>
+<main>
     <section>
         <div class="settingsCard">
             <h1>Settings</h1>
@@ -45,7 +46,13 @@
             </form>
         </div>
     </section>
-
+</main>
+<footer>
+    <section class="contact">
+        <p>Made by Abigail Salem</p>
+        <a href="https://github.com/">My GitHub</a>
+    </section>
+</footer>
 <script type="module" src="scripts/main.js"></script>
 <script type="module" src="scripts/settings.js"></script>
 </body>
