--- a/tasks.html
+++ b/tasks.html
@@ -45,7 +45,13 @@
         </div>
     </section>
 </main>
-< <script type="module" src="scripts/main.js"></script>
+<footer>
+    <section class="contact">
+        <p>Made by Abigail Salem</p>
+        <a href="https://github.com/">My GitHub</a>
+    </section>
+</footer>
+<script type="module" src="scripts/main.js"></script>
 <script type="module" src="scripts/storage.js"></script>
 <script type="module" src="scripts/taskList.js"></script>
 <script type="module" src="scripts/search.js"></script>
