correcting a few errors for github pages

--- a/settings.html
+++ b/settings.html
@@ -42,7 +42,7 @@
                 <div class="formGroup">
                     <button type="submit" class="saveBtn" id="saveBtn">Save Settings</button>
                 </div>
-                <div id="settingMessage" role="status" aria-live="polite"></div>
+                <div id="statusMessage" role="status" aria-live="polite"></div>
             </form>
         </div>
     </section>
