Correcting the about page

--- a/about.html
+++ b/about.html
@@ -4,18 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campus Life Planner | About</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul class="navLinks">
+<header>
+    <nav>
+        <div class="navBar">
+            <h1>Campus Life Planner</h1>
+            <button class="hamburger" id="hamburger" aria-controls="navLinks" aria-expanded="false" aria-label="toggle menu">☰</button>
+            <ul class="navLinks" id="navLinks">
                 <li><a href="index.html">Dashboard</a></li>
                 <li><a href="addForm.html">Add New</a></li>
                 <li><a href="tasks.html">All Tasks</a></li>
                 <li><a href="settings.html">Settings</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
-        </nav>
-    </header>
+        </div>
+    </nav>
+</header>
+<main>
+    <section class="aboutContainer">
+        <h1>About Campus Life Planner</h1>
+        <div class="about">
+            <p>
+                Welcome to the Campus Life Planner! A light-weight web application
+                designed to help students track assignments, deadlines, projects, and plan out their day-to-day life.
+            </p>
+
+            <h3>Why use our Campus Life Planner?</h3>
+            <ul>
+                <li>Organize Daily Tasks</li>
+                <li>Track Deadlines</li>
+                <li>LightWeight</li>
+                <li>Easy to Use</li>
+            </ul>
+        </div>
+    </section>
+</main>
+<footer>
+    <section class="contact">
+        <p>Made by Abigail Salem</p>
+        <a href="https://github.com/">My GitHub</a>
+    </section>
+</footer>
 </body>
 </html>
